fix fontSize spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -198,6 +198,8 @@ a {
   flex-direction: column;
   justify-content: center;
   cursor: pointer;
+  word-wrap: break-word;
+  padding: 0 20px;
 }
 
 #index-text-wrap {
